--- a/src/styles.css
+++ b/src/styles.css
@@ -1,49 +1,41 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: playfair display;
-  font-weight: bold;
-  color: black;
-}
-
-h1 {
-  font-size: 96px;
-}
-h2 {
-  font-family: poppins, sans-serif;
-}
-
-.logo {
-  size: 30px;
+:root {
+  --primary-color: #734cd6;
+  --primary-font-family: Playfair Display;
+  --secondary-font-family: poppins;
+  --primary-text-align: center;
+  --title-primary-color: black;
+  --title-secondary-color: #272142;
 }
 
 .hero {
-  background-color: #f9f7fe;
   text-align: center;
-  padding-bottom: 20px;
 }
 
 .hero p {
   text-align: center;
   font-size: 36px;
   font-weight: bolder;
-  font-family: poppins;
+  font-family: var(--secondary-font-family);
   color: #272142;
+  padding-top: 150px;
 }
 .hero h1 {
   font-size: 96px;
+  font-weight: bold;
+  font-family: var(--primary-font-family);
 }
 .hero h2 {
-  font-weight: none;
+  font-family: var(--primary-font-family);
+  font-weight: bolder;
   color: #272142;
 }
 .hero a {
   background: #6c63ff;
+  font-family: poppins;
   font-size: 18px;
-  color: whitesmoke;
+  color: white;
   border-radius: 4px;
-  line-height: 28px;
+  line-height: 27px;
+  padding: 18px 46px;
+  text-decoration: none;
 }
