--- a/src/styles.css
+++ b/src/styles.css
@@ -13,26 +13,26 @@ img {
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
 }
 
-.about-hero img {
+.content-container img {
   border: none;
   margin-top: 15px;
 }
-.about-hero {
+.content-container {
   padding-top: 150px;
   padding-bottom: 25px;
 }
-.about-hero h1 {
+.content-container h1 {
   font-family: var(--primary-font-family);
   font-size: 64px;
   line-height: 80px;
   font-weight: 600;
 }
-.about-hero h2 {
+.content-container h2 {
   font-size: 18px;
   font-family: var(--secondary-font-family);
 }
 
-.about-hero .btn-projects {
+.content-container .btn-projects {
   color: white;
   font-family: var(--secondary-font-family);
   background: #6c63ff;
@@ -41,15 +41,29 @@ img {
   line-height: 27px;
   text-decoration: none;
 }
-.about-content {
+.content {
   margin-right: 30px;
+  text-align: center;
 }
-.hero {
+.content h3 {
+  font-family: var(--secondary-font-family);
+  font-weight: 700;
+  line-height: 1.5;
+  font-size: 22px;
+  margin-bottom: 0;
+}
+.content p {
+  font-size: 14px;
+}
+.content .hero {
   text-align: center;
   background-color: var(--backgroung-primary-color);
   padding-bottom: 25px;
 }
 
+.hero {
+  text-align: center;
+}
 .hero p {
   font-size: 36px;
   font-weight: bolder;
@@ -123,17 +137,17 @@ img {
 }
 
 @media (max-width: 810px) {
-  .about-hero {
+  .content-container {
     padding-top: 35px;
     text-align: center;
   }
-  .about-hero h1 {
+  .content-container h1 {
     font-size: 42px;
     padding-bottom: 10px;
   }
 }
 
-.about-hero .btn {
+.content .btn {
   background: #6c63ff;
   font-family: var(--secondary-font-family);
   font-size: 18px;
