--- a/src/styles.css
+++ b/src/styles.css
@@ -7,10 +7,79 @@
   --title-secondary-color: #272142;
 }
 
+.logo {
+  max-width: 150px;
+  border: none;
+  box-shadow: none;
+}
+
+nav {
+  padding: 20px 0;
+}
+nav a {
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
+}
+
+nav li {
+  display: inline;
+  list-style: none;
+  margin-left: 15px;
+}
+nav li.active a,
+nav li :hover {
+  color: #6c63ff;
+}
+
+@media (max-width: 420px) {
+  .logo {
+    display: none;
+  }
+}
 img {
   border: 15px solid #f9f7fe;
   border-radius: 4px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
+}
+
+.content .hero {
+  text-align: center;
+  background-color: var(--backgroung-primary-color);
+  padding-bottom: 25px;
+}
+
+.hero p {
+  font-size: 36px;
+  font-weight: bolder;
+  color: var(--title-secondary-color);
+  font-family: var(--secondary-font-family);
+  padding-top: 150px;
+}
+
+.hero {
+  text-align: center;
+}
+
+.hero h1 {
+  font-size: 96px;
+  font-weight: bold;
+  font-family: var(--primary-font-family);
+  color: var(--title-primary-color);
+}
+.hero h2 {
+  font-family: var(--primary-font-family);
+  font-weight: bolder;
+  color: #272142;
+}
+.hero a {
+  background: #6c63ff;
+  font-family: var(--secondary-font-family);
+  font-size: 18px;
+  color: white;
+  border-radius: 4px;
+  line-height: 27px;
+  text-decoration: none;
 }
 
 .content-container {
@@ -54,52 +123,6 @@ img {
 }
 .content p {
   font-size: 14px;
-}
-
-.content .btn {
-  background: #6c63ff;
-  font-family: var(--secondary-font-family);
-  font-size: 18px;
-  color: white;
-  border-radius: 4px;
-  line-height: 27px;
-  text-decoration: none;
-}
-.content .hero {
-  text-align: center;
-  background-color: var(--backgroung-primary-color);
-  padding-bottom: 25px;
-}
-
-.hero {
-  text-align: center;
-}
-.hero p {
-  font-size: 36px;
-  font-weight: bolder;
-  color: var(--title-secondary-color);
-  font-family: var(--secondary-font-family);
-  padding-top: 150px;
-}
-.hero h1 {
-  font-size: 96px;
-  font-weight: bold;
-  font-family: var(--primary-font-family);
-  color: var(--title-primary-color);
-}
-.hero h2 {
-  font-family: var(--primary-font-family);
-  font-weight: bolder;
-  color: #272142;
-}
-.hero a {
-  background: #6c63ff;
-  font-family: var(--secondary-font-family);
-  font-size: 18px;
-  color: white;
-  border-radius: 4px;
-  line-height: 27px;
-  text-decoration: none;
 }
 
 .yogurt-heading {
