--- a/src/styles.css
+++ b/src/styles.css
@@ -54,11 +54,13 @@ img {
   font-weight: bolder;
   color: var(--title-secondary-color);
   font-family: var(--secondary-font-family);
-  padding-top: 150px;
+  padding-top: 100px;
 }
 
 .hero {
+  background-color: #f9f7fe;
   text-align: center;
+  padding: 80px 20px;
 }
 
 .hero h1 {
@@ -138,10 +140,8 @@ img {
   font-family: var(--primary-font-family);
 }
 .container .links {
-  border: 1px solid #6c63ff;
   font-family: var(--secondary-font-family);
   font-size: 16px;
-  color: #6c63ff;
   border-radius: 4px;
   line-height: 27px;
   text-decoration: none;
