--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,25 @@ nav li :hover {
   color: #6c63ff;
 }
 
+footer .email-link {
+  font-size: 24px;
+  text-decoration: none;
+  color: black;
+}
+footer .email-link:hover {
+  color: #6c63ff;
+}
+
+footer .social-links a {
+  text-decoration: none;
+  margin: 0 20px;
+  color: #6c63ff;
+  background-color: var(--backgroung-primary-color);
+  padding: 10px 14px;
+  font-size: 18px;
+  border-radius: 50%;
+}
+
 @media (max-width: 420px) {
   .logo {
     display: none;
