--- a/src/styles.css
+++ b/src/styles.css
@@ -49,6 +49,19 @@ footer .social-links a {
   padding: 10px 14px;
   font-size: 18px;
   border-radius: 50%;
+  transition: all 100mm ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: white;
+  background-color: #6c63ff;
+}
+
+footer .contact-box {
+  background-color: var(--backgroung-primary-color);
+  padding: 30px 60px;
+  border-radius: 10px;
+  font-family: var(--secondary-font-family);
 }
 
 @media (max-width: 420px) {
