--- a/src/styles.css
+++ b/src/styles.css
@@ -44,6 +44,7 @@ footer .email-link:hover {
 footer .social-links a {
   text-decoration: none;
   margin: 0 20px;
+  margin-bottom: 20px;
   color: #6c63ff;
   background-color: var(--backgroung-primary-color);
   padding: 10px 14px;
@@ -152,15 +153,16 @@ h3 {
   margin-top: 15px;
 }
 
-.content-container .btn-projects {
+.content-container .btn-branding {
   color: white;
-  font-family: var(--secondary-font-family);
   background: #6c63ff;
   font-size: 18px;
   border-radius: 4px;
+  border-color: #6c63ff;
   line-height: 27px;
   text-decoration: none;
 }
+
 .content {
   margin-right: 30px;
   text-align: center;
@@ -203,6 +205,10 @@ h3 {
 @media (max-width: 412px) {
   .container {
     text-align: center;
+  }
+
+  .hero {
+    padding-top: 40px 20px;
   }
   .hero h1 {
     font-size: 42px;
