--- a/src/styles.css
+++ b/src/styles.css
@@ -72,6 +72,7 @@ footer .contact-box p {
 footer .btn-branding {
   background-color: #6c63ff;
   color: white;
+  font-weight: bolder;
 }
 footer .btn-light :hover {
   background-color: var(--backgroung-primary-color);
